add redux action

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Deku HMR Example</title>
+  <title>Deku Example</title>
 </head>
 <body>
   <div id="mount"></div>
+
   <script type="text/javascript" src="/build/bundle.js"></script>
 </body>
 </html>
