ability to autorender by state changing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Deku Example</title>
 </head>
 <body>
-  <div id="mount"></div>
+  <div id="app"></div>
 
   <script type="text/javascript" src="/build/bundle.js"></script>
 </body>
